--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <h1>Welcome</h1>
-    <img src="photo.jpg" />
+    <img src="6DEDFC16-965A-4242-A02B-F7A83F496342_2.jpg" />
     <h2>About</h2>
     <p>I am a 17-year old student from <a href="http://www.dunmanhigh.moe.edu.sg">Dunman High School</a>, Singapore.</p>
     <h2>Interests</h2>
-    <p>I am interested in <a href="http://www.espn.com/">soccer</a>.</p>
+    <p>I am interested in <a href="https://en.wikipedia.org/wiki/Art">art</a>.</p>
     <h2>Projects</h2>
     <p>I am participating in <a href="https://developers.google.com/open-source/gci/">Google Code-in 2016</a> with <a href="http://fossasia.org">FOSSASIA</a>!</p>
   </body>
