--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h2>Interests</h2>
     <p>I am interested in <a href="https://en.wikipedia.org/wiki/Art">art</a>.</p>
     <h2>Projects</h2>
-    <p>I am participating in <a href="https://developers.google.com/open-source/gci/">Google Code-in 2016</a> with <a href="http://fossasia.org">FOSSASIA</a>!</p>
+    <p>I am participating in <a href="https://developers.google.com/open-source/gci/">Google Code-in 2016</a> with <a href="http://fossasia.org">FOSSASIA</a>! Yay :D</p>
   </body>
 </html>
